--- a/charts/mealie/templates/pvc.yaml
+++ b/charts/mealie/templates/pvc.yaml
@@ -1,4 +1,5 @@
 {{- if .Values.persistence.enabled }}
+{{- with .Values.persistence }}
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
@@ -7,9 +8,10 @@ metadata:
     {{- include "mealie.labels" . | nindent 4 }}
 spec:
   accessModes:
-    - ReadWriteOnce
-  storageClassName: {{ .Values.persistence.storageClass }}
+    - {{ .accessMode }}
+  storageClassName: {{ .storageClass }}
   resources:
     requests:
-      storage: {{ .Values.persistence.size }}
+      storage: {{ .size }}
+{{- end }}
 {{- end}}
